--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,16 @@
-# set -g mouse
-
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
+
+set -g status-position bottom
+set -g status-bg colour234
+set -g status-fg colour137
+set -g status-left ''
+set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
@@ -17,10 +26,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'jimeh/tmux-themepack'
-
-set -g @themepack 'powerline/double/cyan'
-
+# set -g @plugin 'fabioluciano/tmux-tokyo-night'
+# set -g @themepack 'powerline/double/green'
+# set -g @plugin 'jimeh/tmux-themepack'
+ 
 set -g @ressurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
@@ -32,3 +41,4 @@ set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
